--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Template",
+  "name": "enigma-machine",
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
@@ -16,7 +16,7 @@
   "keywords": [],
   "author": "Jonah Johansen",
   "license": "MIT",
-  "description": "Template Enviroment",
+  "description": "An accurate simulation of the Engima encoding machine",
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/plugin-transform-modules-commonjs": "^7.6.0",
